# LiteRTOS

./: .gitignore  CMakeLists.txt  README.md
application/: main.cpp
examples/: main.cpp
hal/: port.cpp  port.h
kernel/: rtos.cpp  rtos.h
platform/tm4c123gxl/: linker.ld  startup.s
platform/tm4c123gxl_bsp/tivaware_c_series_2_1_4_178/: content.tirex.json  package.tirex.json
platform/tm4c123gxl_bsp/tivaware_c_series_2_1_4_178/windows_drivers/: usb_dev_cserial.inf  usb_dev_serial.inf
